# flame_thrower

./: README.md  partitions.csv
main/: BLE.c  BLE_AT2.c  BLE_AT2.h  CMakeLists.txt  Kconfig.projbuild  battery.c  battery.h  blink.c  blink.h  fan.c  fan.h  flame_thrower.c  flame_thrower.h  global.h  http_log.c  http_log.h  idf_component.yml  mqtt.c  mqtt.h  openlid.c  openlid.h  ota.c  ota.h  screen.c  screen.h  temp  wifi.c  wifi.h
main/resources/: fan_icon.h
